--- a/dataset/.gitignore
+++ b/dataset/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 *[celebahq|ffhq]_[128|512]
+*derain_[test|train]_sr/
 *.mdb
 *.png
 !*000[3-4][0-1].png
